[gd_scene load_steps=5 format=3 uid="uid://xev5571s0iur"]

[ext_resource type="Texture2D" uid="uid://chiacf1k1d4lw" path="res://assets/textures/ui/ScoreBox.png" id="1_284sm"]
[ext_resource type="Script" path="res://scripts/hud.gd" id="1_obxwh"]
[ext_resource type="Texture2D" uid="uid://dt48dogikunkw" path="res://assets/textures/ui/PauseBtn.png" id="2_aks2n"]

[sub_resource type="LabelSettings" id="LabelSettings_ucpba"]
font_size = 36
font_color = Color(0, 0, 0, 1)

[node name="HUD" type="Control"]
process_mode = 3
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_obxwh")

[node name="TopBarBG" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_bottom = 90.0
grow_horizontal = 2
color = Color(0, 0, 0, 0.45098)

[node name="TopBar" type="Control" parent="."]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_bottom = 90.0
grow_horizontal = 2

[node name="ScoreBox" type="TextureRect" parent="TopBar"]
layout_mode = 0
offset_left = 5.0
offset_top = 4.0
offset_right = 291.0
offset_bottom = 82.0
texture = ExtResource("1_284sm")
expand_mode = 1

[node name="ScoreLabel" type="Label" parent="TopBar"]
layout_mode = 0
offset_left = 12.0
offset_top = 11.0
offset_right = 280.0
offset_bottom = 94.0
text = "99999999999
"
label_settings = SubResource("LabelSettings_ucpba")
horizontal_alignment = 2
vertical_alignment = 1

[node name="PauseBtn" type="TextureButton" parent="TopBar"]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -97.0
offset_bottom = 92.0
grow_horizontal = 0
texture_normal = ExtResource("2_aks2n")
stretch_mode = 3

[connection signal="pressed" from="TopBar/PauseBtn" to="." method="_on_pause_btn_pressed"]
